# EasyImageSizer3

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  EasyImageSizer3 Projekt Homepage.url  EasyImageSizer3.vdproj  LICENSE  LICENSE.rtf  NEWS  README  TODO  easyimagesizer3.spec
data/: easyimagesizer3.desktop  easyimagesizer3.sh  easyimagesizer3.xpm
easyimagesizer3/: .gitignore  CMakeLists.txt  easyimagesizer3.qrc  pluginsdialog.ui
easyimagesizer3-gui/: .gitignore  CMakeLists.txt  easyimagesizer3-gui.qrc  form.cpp  form.ui  main.cpp  mainwindow.cpp  mainwindow.h  tipdialog.ui
easyimagesizer3/include/easyimagesizer3/: easyimagesizer3.h  easyimagesizer3_global.h  easyimagesizer3plugin.h  eisimage.h  pluginloader.h  pluginsdialog.h
easyimagesizer3/src/: easyimagesizer3.cpp  eisimage.cpp  pluginloader.cpp  pluginsdialog.cpp
easyimagesizer3_gui/: CMakeLists.txt  easyimagesizer3-gui.rc  form.cpp  form.h  form.ui  main.cpp  mainwindow.cpp  mainwindow.ui  tipdialog.cpp  tipdialog.h
plugins/: CMakeLists.txt
plugins/blur/: .gitignore  CMakeLists.txt  blur.cpp  blur.h  blur.qrc  blur.ui  previewimagelabel.cpp  previewimagelabel.h
plugins/color/: CMakeLists.txt  color.cpp  color.h  color.qrc  color.ui
plugins/exif/: CMakeLists.txt  exif.cpp  exif.h  exif.ui  ui_exif.h
plugins/geotag/: CMakeLists.txt  geotag.cpp  geotag.h  geotag.ui  map.cpp  map.h
plugins/overlay/: CMakeLists.txt  overlay.cpp  overlay.h  overlay.ui
plugins/overlay-text/: CMakeLists.txt  overlay-text.cpp  overlay-text.h  overlay-text.ui
plugins/rename/: CMakeLists.txt  rename.cpp  rename.h  rename.ui
plugins/resize/: .gitignore  CMakeLists.txt  resize.cpp  resize.h  resize.ui
plugins/rotate/: CMakeLists.txt  rotate.cpp  rotate.h  rotate.ui
