cmake_minimum_required(VERSION 2.8.0)

project(EASYIMAGESIZER3_LIB)

find_package("Qt4" REQUIRED)
include(${QT_USE_FILE})

include_directories( ${EASYIMAGESIZER3_LIB_BINARY_DIR} ${QT_INCLUDE_DIR} )

ADD_DEFINITIONS(${QT_DEFINITIONS})
ADD_DEFINITIONS( -D EASYIMAGESIZER3_LIBRARY )
# enable warnings
add_definitions( -Wall )

file(GLOB EASYIMAGESIZER3_LIB_SRCS "src/*.cpp" "include/easyimagesizer3/*.h")
file(GLOB EASYIMAGESIZER3_LIB_HEADERS "include/easyimagesizer3/*.h")

set( EASYIMAGESIZER3_LIB_UIS
    pluginsdialog.ui
)

set( EASYIMAGESIZER3_LIB_RCS
       easyimagesizer3.qrc
  )

QT4_WRAP_UI(EASYIMAGESIZER3_LIB_UIS_H ${EASYIMAGESIZER3_LIB_UIS})
QT4_ADD_RESOURCES( EASYIMAGESIZER3_LIB_RC_SRCS ${EASYIMAGESIZER3_LIB_RCS} )
QT4_WRAP_CPP(EASYIMAGESIZER3_LIB_MOC_SRCS ${EASYIMAGESIZER3_LIB_HEADERS})

add_library(easyimagesizer3 SHARED ${EASYIMAGESIZER3_LIB_SRCS}
									${EASYIMAGESIZER3_LIB_MOC_SRCS}
									${EASYIMAGESIZER3_LIB_RC_SRCS}
									${EASYIMAGESIZER3_LIB_UIS_H})
target_link_libraries(easyimagesizer3 exiv2 ${QT_LIBRARIES})
