	########### Subdirectories ###############
	PROJECT(EasyImageSizer)
	ADD_SUBDIRECTORY( blur )
    ADD_SUBDIRECTORY( color )
	ADD_SUBDIRECTORY( exif )
	ADD_SUBDIRECTORY( overlay )
	ADD_SUBDIRECTORY( overlay-text )
    ADD_SUBDIRECTORY( rename )
    ADD_SUBDIRECTORY( resize )
    ADD_SUBDIRECTORY( rotate )
    ADD_SUBDIRECTORY( geotag )
